Add Navbar and MobileSidebar components; implement API data fetching and enhance layout with Searchbar and Carousel

--- a/package.json
+++ b/package.json
@@ -37,15 +37,18 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
+    "flowbite-react": "^0.10.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
     "next": "14.2.21",
     "next-themes": "^0.4.4",
+    "nhaccuatui-api": "^1.0.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
